private games working